@@ -16,6 +16,7 @@ S3method(fortify,phangorn)
 S3method(fortify,phylip)
 S3method(fortify,phylo)
 S3method(fortify,phylo4)
+S3method(fortify,phyloseq)
 S3method(fortify,r8s)
 S3method(fortify,raxml)
 export("%<%")
@@ -41,11 +42,11 @@ export(geom_nodepoint)
 export(geom_point2)
 export(geom_rootpoint)
 export(geom_segment2)
-export(geom_text)
 export(geom_text2)
 export(geom_tiplab)
 export(geom_tippoint)
 export(geom_tree)
+export(geom_tree2)
 export(geom_treescale)
 export(get.fields)
 export(get.offspring.tip)
