@@ -85,19 +85,28 @@ geom_rootpoint <- function(mapping = NULL, data = NULL, stat = "identity",
 geom_point2 <- function(mapping = NULL, data = NULL, stat = "identity",
                        position = "identity", na.rm = FALSE,
                        show.legend = NA, inherit.aes = TRUE, ...) {
-  layer(
-    data = data,
-    mapping = mapping,
-    stat = stat,
-    geom = GeomPointGGtree,
-    position = position,
-    show.legend = show.legend,
-    inherit.aes = inherit.aes,
-    params = list(
-      na.rm = na.rm,
-      ...
+
+    
+    default_aes <- aes_(node=~node)
+    if (is.null(mapping)) {
+        mapping <- default_aes
+    } else {
+        mapping <- modifyList(mapping, default_aes)
+    }
+    
+    layer(
+        data = data,
+        mapping = mapping,
+        stat = StatTreePoint,
+        geom = GeomPointGGtree,
+        position = position,
+        show.legend = show.legend,
+        inherit.aes = inherit.aes,
+        params = list(
+            na.rm = na.rm,
+            ...
+        )
     )
-  )
 }
 
 ##' @importFrom ggplot2 ggproto
@@ -108,13 +117,21 @@ GeomPointGGtree <- ggproto("GeomPointGGtree", GeomPoint,
                                data[data$subset,]
                            }  ## ,
                            
-##                            draw_panel = function(data, panel_scales, coord, na.rm = FALSE){
-##                                GeomPoint$draw_panel(data, panel_scales, coord, na.rm)
-##                            },
+                           ## draw_panel = function(data, panel_scales, coord, na.rm = FALSE){
+                           ##     GeomPoint$draw_panel(data, panel_scales, coord, na.rm)
+                           ## },
                            
-##                            draw_key = draw_key_point,
+                           ## draw_key = draw_key_point,
                            
-##                            required_aes = c("x", "y"),
-##                            default_aes = aes(shape = 19, colour = "black", size = 1.5, fill = NA,
-##                                alpha = NA, stroke = 0.5)
+                           ## required_aes = c("x", "y"),
+                           ## default_aes = aes(shape = 19, colour = "black", size = 1.5, fill = NA,
+                           ##                   alpha = NA, stroke = 0.5)
                             )
+
+
+StatTreePoint <-  ggproto("StatTreePoint", Stat,
+                          required_aes = "node",
+                          compute_group = function(data, scales) {
+                              setup_tree_data(data)
+                          }
+                          )
