@@ -22,10 +22,17 @@ geom_text2 <- function(mapping = NULL, data = NULL, stat = "identity",
     position <- position_nudge(nudge_x, nudge_y)
   }
 
+  default_aes <- aes_(node=~node)
+  if (is.null(mapping)) {
+      mapping <- default_aes
+  } else {
+      mapping <- modifyList(mapping, default_aes)
+  }
+    
   layer(
       data = data,
       mapping = mapping,
-      stat = stat,
+      stat = StatTreeLabel,
       geom = GeomTextGGtree,
       position = position,
       show.legend = show.legend,
@@ -39,49 +46,33 @@ geom_text2 <- function(mapping = NULL, data = NULL, stat = "identity",
       )
 }
 
-##' text annotations
-##' @export
-##' @rdname geom_text
-##' @param mapping the aesthetic mapping
-##' @param data A layer specific dataset -
-##'             only needed if you want to override he plot defaults.
-##' @param stat The statistical transformation to use on the data for this layer
-##' @param position The position adjustment to use for overlapping points on this layer
-##' @param parse if TRUE, the labels will be passd into expressions
-##' @param na.rm logical
-##' @param show.legend logical
-##' @param inherit.aes logical
-##' @param ... other arguments passed on to 'layer'
-##' @param nudge_x horizontal adjustment
-##' @param nudge_y vertical adjustment
-##' @param check_overlap if TRUE, text that overlaps previous text in the same layer will not be plotted
-##' @source
-##' This is just the imported function
-##' from the ggplot2 package. The documentation you should
-##' read for the geom_text function can be found here: \link[ggplot2]{geom_text}
-##'
-##' @seealso
-##' \link[ggplot2]{geom_text}
-geom_text <- ggplot2::geom_text
-
 
 ##' @importFrom ggplot2 GeomText
 ##' @importFrom ggplot2 draw_key_text
 GeomTextGGtree <- ggproto("GeomTextGGtree", GeomText,
                           setup_data = function(data, params) {
+                              if (is.null(data$subset))
+                                  return(data)
                               data[data$subset,]
                           },
-                          
                           draw_panel = function(data, panel_scales, coord, parse = FALSE,
-                              na.rm = FALSE, check_overlap = FALSE) {
+                              na.rm = TRUE, check_overlap = FALSE) {
                               GeomText$draw_panel(data, panel_scales, coord, parse,
                                                   na.rm, check_overlap)
                           },
-
-                          required_aes = c("x", "y", "label"),
+                          required_aes = c("node", "x", "y", "label"),
                           
                           default_aes = aes(colour = "black", size = 3.88, angle = 0, hjust = 0.5,
                               vjust = 0.5, alpha = NA, family = "", fontface = 1, lineheight = 1.2),
                           
                           draw_key = draw_key_text
                           )
+
+StatTreeLabel <-  ggproto("StatTreeLabel", Stat,
+                          required_aes = "node",
+                          compute_group = function(data, scales) {
+                              setup_tree_data(data)
+                          }
+                          )
+
+
