@@ -9,32 +9,6 @@ geom_text2(mapping = NULL, data = NULL, stat = "identity",
   inherit.aes = TRUE, ..., nudge_x = 0, nudge_y = 0,
   check_overlap = FALSE)
 }
-\arguments{
-\item{mapping}{the aesthetic mapping}
-
-\item{data}{A layer specific dataset -
-only needed if you want to override he plot defaults.}
-
-\item{stat}{The statistical transformation to use on the data for this layer}
-
-\item{position}{The position adjustment to use for overlapping points on this layer}
-
-\item{parse}{if TRUE, the labels will be passd into expressions}
-
-\item{na.rm}{logical}
-
-\item{show.legend}{logical}
-
-\item{inherit.aes}{logical}
-
-\item{...}{other arguments passed on to 'layer'}
-
-\item{nudge_x}{horizontal adjustment}
-
-\item{nudge_y}{vertical adjustment}
-
-\item{check_overlap}{if TRUE, text that overlaps previous text in the same layer will not be plotted}
-}
 \value{
 text layer
 }
